--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "WA-round.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
