--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Weather App",
-  "name": "weather App PWA",
+  "name": "Weather App",
   "icons": [
     {
       "src": "WA-favicon.png",
